--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    
-    
-    <title>Document</title>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather App</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Weather App</h1>
-        <form id="search-form">
-          <input type="text" id="search-input" placeholder="Enter a city">
-          <button type="submit" id="search-button">Search</button>
-        </form>
-      </header>
-      <main>
-        <div id="current-weather">
-          <h2>Current Weather</h2>
-          <div id="weather-icon"></div>
-          <div id="weather-details">
-            <p id="city-name"></p>
-            <p id="temperature"></p>
-            <p id="humidity"></p>
-            <p id="wind-speed"></p>
-          </div>
-        </div>
-        <div id="forecast">
-          <h2>5-Day Forecast</h2>
-          <div id="forecast-container"></div>
-        </div>
-      </main>
-
-
-
-    <script src="./assets/js/script.js"></script>
+  <header>
+    <h1>Weather App</h1>
+    <form id="search-form">
+      <input type="text" id="search-input" placeholder="Enter a city">
+      <button type="submit" id="search-button">Search</button>
+    </form>
+  </header>
+  <main>
+    <div id="current-weather">
+      <h2>Current Weather</h2>
+      <div id="weather-icon"></div>
+      <div id="weather-details">
+        <p id="city-name"></p>
+        <p id="date"></p>
+        <p id="temperature"></p>
+        <p id="humidity"></p>
+        <p id="wind-speed"></p>
+      </div>
+    </div>
+    <div id="forecast">
+      <h2>5-Day Forecast</h2>
+      <div id="forecast-container"></div>
+    </div>
+    <div id="search-history">
+      <h2>Search History</h2>
+      <ul id="history-list"></ul>
+    </div>
+  </main>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
